--- a/text.textile
+++ b/text.textile
@@ -8,9 +8,9 @@ To accomplish this, I'm starting the book out (after the introduction) with a se
 
 h2. Installing Git
 
-Before we can start playing with git, we'll have to install it. I'll quickly cover installing Git on Linux, Mac and Windows.
+Before we can start playing with git, we'll have to install it. I'll quickly cover installing Git on Linux, Mac and Windows.  I will not get into super fine detail, because others have done that much better, but I will give you an overview and links as to where to find detailed instructions on each platform.
 
-You can download the Git source code from "git.or.cz":http://git.or.cz/
+For all of these, you can download the Git source code from "git.or.cz":http://git.or.cz/
 
 h3. Installing on Linux
 
@@ -33,35 +33,49 @@ shell. $>yum install git-core
 
 h3. Installing on Mac
 
-You are likely going to want to install git without the asciidoc dependency because it is a pain to install.  When you compile from source, you will see
+You are likely going to want to install git without the asciidoc dependency because it is a pain to install.   Other than that, what you basically need is Curl and Expat.  For any of these except the binary OS X installer, you will need the Developer Tools installed.  If you don't have the OS X install discs anymore, you can get the tools from the "Apple Website":http://developer.apple.com/tools/
+
 
 h4. Mac 10.4 - Tiger
 
-There are some requirements you'll have to install before you can compile git.
+There are some requirements you'll have to install before you can compile git.  Expat can be installed roughly like this:
 
-http://sourceforge.net/projects/expat/
+shell. curl -O http://surfnet.dl.sourceforge.net/sourceforge/expat/expat-2.0.1.tar.gz
+tar zxvf expat-2.0.1.tar.gz 
+cd expat-2.0.1
+./configure --prefix=/usr/local
+make
+make check
+sudo make install
+cd ..
+
+Then download and compile Git as per the Linux instructions.
 
 However, if you want an easier path, you can use the excellent MacPorts software:
 
-http://www.macports.org/
+Follow the instructions on the "MacPorts Homepage":http://www.macports.org/
 
 and just run 
 
-# port install git-core
+shell. $ sudo port install git-core
 
+For an in depth tutorial on installing on 10.4, see "this article":http://blog.kineticweb.com/articles/2007/08/26/compiling-git-for-mac-os-x-10-4-10-intel
 
 h4. Mac 10.5 - Leopard
 
-All the requirements are installed with the developer CD, so you can just download source and compile pretty easily if the developer tools are installed. 
+The easiest way to install is most likely the "Git OSX Installer":http://code.google.com/p/git-osx-installer/, which you can get from Google Code.  Just download and run the dmg from the website.
+
+If you want to compile from source, all the requirements are installed with the developer CD, so you can just download source and compile pretty easily if the developer tools are installed. 
+
+For an in-depth tutorial on installations under Leopard, see "this article":http://blog.kineticweb.com/articles/2007/10/30/compiling-git-for-mac-os-x-leopard-10-5
 
 MacPorts is also an easy option if you have that installed.
 
-http://code.google.com/p/git-osx-installer/
-
-
 h3. Windows
 
-"Msysgit":http://code.google.com/p/msysgit/
+There are two options on Windows currently, but the popular one seems to be "MSysGit":http://code.google.com/p/msysgit/, which installs easily and is runnable on the Windows command line.  Simply download the exe file from the "downloads list":http://code.google.com/p/msysgit/downloads/list and run it.
+
+
 
 
 h2. A Short History of Git
@@ -82,6 +96,8 @@ h1. Section One - Understanding Git
 
 In this section, we will go over what git was built for and how it works, hopefully laying the groundwork to properly understand what it is doing when we run the commands.
 
+.note the initial commit message for the git project was 'initial version of "git", the information manager from hell' - Linus, 4/7/05
+
 When I learned Git, as many people do, I learned it in the context of other SCMs I had used - Subversion or CVS.  I really think this is a horrible way to learn Git.  I felt far more comfortable with it when I stopped thinking that 'git add' was sort of like 'svn add', but instead understood what it was actually doing.  Then I found I could find new and interesting ways to use what is really a very powerful and cool toolset.
 
 !../artwork/s1/what-git-is.png!
@@ -95,7 +111,7 @@ Git is a stupid content tracker.  That is probably the best description of it - 
 Git tracks content - files and directories.  It is at it's heart a collection of simple tools that implement a tree history storage and directory content management system.  It is simply used as an SCM, not really designed as one.
 
 
-"In many ways you can just see git as a filesystem — it's content-addressable, and it has a notion of versioning, but I really really designed it coming at the problem from the viewpoint of a filesystem person (hey, kernels is what I do), and I actually have absolutely zero interest in creating a traditional SCM system." - Linus (http://marc.info/?l=linux-kernel&m=111314792424707)
+sidebar. "In many ways you can just see git as a filesystem — it's content-addressable, and it has a notion of versioning, but I really really designed it coming at the problem from the viewpoint of a filesystem person (hey, kernels is what I do), and I actually have absolutely zero interest in creating a traditional SCM system." - Linus (http://marc.info/?l=linux-kernel&m=111314792424707)
 
   
 When most SCMs store a new version of a project, they store the code delta or diff.  When Git stores a new version of a project, it stores a new tree - a bunch of blobs of content and a collection of pointers that can be expanded back out into a full directory of content and subdirectories.  If you want a diff between two versions, it doesn't add up all the deltas, it simply looks at the two full directories and runs a new diff on them.
@@ -125,6 +141,8 @@ Git also is efficient in it's network operations - most protocols transfer only 
 h3. A Toolkit Design
 
 Git is not really a single binary, but a collection of hundreds of scripts, which is sometimes annoying to people trying to learn Git, but is pretty cool when you want to do anything non-standard with it.  Git is less a program and more a toolkit that can be combined and chained to do new and interesting things.
+
+note. For a long time, Git was just the raw toolkit and the project to wrap those into a user friendly SCM was called 'Cogito'.  That project has since been abandoned as Git itself became easier to use.
 
 The tools can be more or less divided into two major camps, often referred to as the 'porcelain' and the 'plumbing'.  The 'plumbing' is not really meant to be used by people on the command line, but rather do simple things flexibly and are combined by programs and scripts into 'plumbing' programs.  The 'plumbing' scripts are largely what we will be focusing on in this book - the user-oriented interfaces to do SCM type things, hiding the low-level fun.
 
@@ -665,7 +683,11 @@ The interactive shell is pretty simple - playing with it instead of running 'git
 
 h4. Removing
 
-'git rm'
+For removing files from your tree, you can simply run 
+
+shell. git rm <filename>
+  
+which will remove that file from the index (and thus from the next commit) as well as from your working directory.  On your next commit, the tree that commit points to will simply not contain that file anymore.
 
 
 
@@ -742,15 +764,55 @@ shell. git-catfile.txt
 
 With those basic commands, you should be able to explore and inspect any object in any git repository relatively easily.
 
+h3. Graphical Interfaces
+
+There are two major graphical interfaces that come with Git as tools to browse the repository.
+
 h4. Gitk
+
+A very popular choice for browsing Git repositories is the Tcl/Tk based browser called 'gitk'.  If you want to see a simple visualization of your repository, gitk is a great tool.
+
+!../artwork/s2/gitk.png!
+
+Gitk will also take most of the same arguments that 'git log' will take, including '--since', '--until', '--max-count', revision ranges and path limiters.  One of the most interesting visualizations that I regularly use is 'gitk --all', which will show you all of your branches (rather than just the one you are currently on) next to each other.
 
 h4. Instaweb
 
-http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html
+If you don't want to fire up Tk, you can also browse your repository quickly via the 'git instaweb' command.  This will basically fire up a web server running the "gitweb":http://git.or.cz/gitwiki/Gitweb cgi script using lighttpd, apache or webrick.  It then tries to automatically fire up your default web browser and points it at the new server.
+
+shell. git-instaweb.txt
+
+!../s2/instaweb.png!
+
+When you are done, you can run the following to shut down the server.
+
+shell. $>git instaweb --stop
+
+This is a quick way to throw up a web interface on your git repository for sharing with others or simply browsing it in a different way.  
+
+For a more long term web interface to your repository, you can throw the gitweb files that come with Git into your cgi-bin directory.
 
 * "git show":http://www.kernel.org/pub/software/scm/git/docs/git-show.html
 * "git ls-tree":http://www.kernel.org/pub/software/scm/git/docs/git-ls-tree.html
 * "git cat-file":http://www.kernel.org/pub/software/scm/git/docs/git-cat-fileß.html
+* "gitk":http://www.kernel.org/pub/software/scm/git/docs/gitk.html
+* "git instaweb":http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html
+
+h2. Searching Git
+
+Git has an easy way for searching through trees in your repository without having to check them out into your working directory.  It is called 'git-grep' and works very much like the traditional UNIX 'grep' command, with the difference that instead of listing the files you want to search as an argument, you list the trees you want to search.  
+
+For example, if we wanted to search for the string 'log_syslog' in versions 1.0 and 1.5.3.8 of the Git source code in the C files only, we can find that very easily.
+
+shell. git-grep.txt
+
+You can see that you can see the number of lines that match, or the actual lines, and you can list as many trees (in this case, I used tags to reference them) as you want to search.
+
+Another interesting example is to see which files in these versions do not contain the string 'git' anywhere in them:
+
+shell. git-grep2.txt
+
+* "git grep":http://www.kernel.org/pub/software/scm/git/docs/git-grep.html
 
 h2. Git Diff
 
@@ -946,6 +1008,34 @@ The rebase command is one of the most useful and unique in the git workflow.  To
 * "git reset":http://www.kernel.org/pub/software/scm/git/docs/git-reset.html
 
 h2. Stashing
+
+Stashing is a pretty simple concept that is incredibly useful and very easy to use.  If you are working on your code and you need to switch to another branch for some reason and don't want to commit your current state because it is only partially completed, you can run 'git stash', which will basically take the changes from your last commit to the current state of your working directory and store it temporarily.
+
+In the following example, I have a change to my 'lib/simplegit.rb' file, but it's not complete.
+
+shell. stash.txt
+
+Now I can see that my working directory is clean, as if I had committed, but I did not.  Now I can switch branches, work for a while somewhere else, then switch back. So where did that change go?  How do I get it back?  Well, I can see my stashes by running 'git stash list'.
+
+shell. stash-list.txt
+
+I see I have two stashes on the 'master' branch, both saved off of working from the same commit, and I have one stashed change off the 'experiment' branch.  However, I can't remember which stash was the one I want, so I can use 'git stash show' to figure it out.
+
+shell. stash-show.txt
+
+I can also use any normal git tools that will take a tree on it, for instance, 'git diff':
+
+shell. stash-diff.txt
+
+And finally, I can apply it:
+
+shell. stash-apply.txt
+
+Now we can see that our working directory is back to where it was, with one file in an unstaged state.  Now I would have to 'git add' and 'git commit' it if I wanted to keep the change. 
+
+Normally it's not even this complicated.  If you run 'git stash apply' without the actual stash reference, it will just apply the last stash you saved on that branch.  Normally I will just use 'git stash' to save something, go work elsewhere, then come back and run 'git stash apply' to get back to where I was.
+
+* "git stash":http://www.kernel.org/pub/software/scm/git/docs/git-stash.html
 
 h2. Tagging
 
