--- a/text.textile
+++ b/text.textile
@@ -1320,18 +1320,29 @@ If you don't want to deal with setting up and maintaining your own server for yo
 
 I will focus on some interesting features of a commercial service called "GitHub":http://github.com here, but there is also an open source project called "Gitorious":http://gitorious.com that has many of the same features.
 
-My focus on GitHub is only because it has private repos for commercial projects, the open source ones are free, and many popular projects featured in the Peepcode series, including Ruby on Rails, Merb, RSpec, and Capistrano are hosted there.
+My focus on GitHub is only because it has private repos for commercial projects, which means you could use it to host your companies source code (as GitHub does), but also the open source ones are free, and it hosts many popular projects featured in the Peepcode series, including Ruby on Rails, Merb, RSpec, and Capistrano.
 
 h3. GitHub
 
-open source software repos are free
+GitHub is interesting as a source code hosting service because it includes some social networking features, which is not what most people imagine when thinking of source code hosting.
 
-closed source or multiple committers cost
+You can follow your friends or developers whose work you are interested in, or individual projects.  You then subscribe to a single Atom feed and are kept up to date on what all those projects and people are doing, code-wise.
 
-social networking
- - watching people and projects
- - forking a project
- - sending a pull request
+!../artwork/s2/github.png!
+
+More interesting, you can publicly fork a project, so you have your own copy of it.  GitHub is unique in concept in that it is really centered around individuals rather than projects.  For instance, if you want to follow or work on Merb, you would follow or fork wycats's Merb, there is really no 'official' Merb page in GitHub.  It's simply that wycats is known to be the blessed repository by the Merb project.  
+
+You could just as easily follow and fork someone else's repository of the project.  An interesting example of this is the "git-wiki":http://github.com/sr/git-wiki project, which was started by a user called 'sr', then was forked and greatly modified by 'al3x'.  'sr' wanted to keep the project simple, and so now there are two major versions of the project by these two.  I have a checkout of the project and remotes added for each one, so I could work on and contribute to either.
+
+!../artwork/s2/github.png!
+
+Let's say there is a popular feature request that is either not completed or not accepted by the main project maintainer.  You can very easily fork the project and keep your patch or patches up to date with the head on a regular basis and people can pull from yours instead.  Perhaps enough demand builds up or enough testing is done from all these users that the patch is accepted.  You can then delete your fork and revert to the original project head.
+
+This will also really change patch submission for large projects.  When Rails is fully on GitHub and integrated into the core team workflow, submitting patches will be far less painful for all parties.  You can fork the project, add your patch and submit a pull request for your branch with the fix to one of the core members or through the ticketing system.  They can add you as a remote easily, create a new testing branch, merge in or rebase your branch, test and accept or reject.  If your patch is ignored or the team doesn't have time to deal with it yet, it's easy to keep up to date by continually rebasing and re-sending the pull requests until it's either rejected or accepted.  It doesn't just go stale until it's difficult to apply the patch anymore.
+
+Services like GitHub and an increased adoption of distributed SCM systems will dramatically change open source development workflows on teams of all sizes, in addition to changing the way individual developers work.
+
+
 
 
 h1. Section Three - Commands Overview
