--- a/text/s0-c02-installing.textile
+++ b/text/s0-c02-installing.textile
@@ -1,8 +1,10 @@
 h2. Installing Git
 
-Before we can start playing with git, we'll have to install it. I'll quickly cover installing Git on Linux, Mac and Windows.  I will not get into super fine detail, because others have done that much better, but I will give you an overview and links as to where to find detailed instructions on each platform.
+Before we can start playing with git, we'll have to install it. I'll quickly cover installing Git on Linux, Mac and Windows.  I will not get into really fine detail, because others have done that much better, but I will give you an overview and links as to where to find more detailed instructions on each platform.
 
-For all of these, you can download the Git source code from "git.or.cz":http://git.or.cz/
+For any of these examples, you can find a link to the most current Git source code at "git.or.cz":http://git.or.cz/
+
+I would recommend compiling from source if possible, simply because Git is lately making big strides in usability, so more current versions may be a bit easier to use.
 
 h3. Installing on Linux
 
@@ -18,19 +20,19 @@ If you are running Ubuntu or another Debian based system, you can run
 
 shell. $>apt-get git-core
 
-or on RedHat based systems, you can sometimes run:
+or on yum based systems, you can often run:
 
 shell. $>yum install git-core
 
 
 h3. Installing on Mac
 
-You are likely going to want to install git without the asciidoc dependency because it is a pain to install.   Other than that, what you basically need is Curl and Expat.  For any of these except the binary OS X installer, you will need the Developer Tools installed.  If you don't have the OS X install discs anymore, you can get the tools from the "Apple Website":http://developer.apple.com/tools/
+You are likely going to want to install Git without the asciidoc dependency because it is a pain to install.   Other than that, what you basically need is Curl and Expat.  With the exception of the Leopard binary OS X installer, you will need the Developer Tools installed.  If you don't have the OS X install discs anymore, you can get the tools from the "Apple Website":http://developer.apple.com/tools/
 
 
 h4. Mac 10.4 - Tiger
 
-There are some requirements you'll have to install before you can compile git.  Expat can be installed roughly like this:
+There are some requirements you'll have to install before you can compile Git.  Expat can be installed roughly like this:
 
 shell. curl -O http://surfnet.dl.sourceforge.net/sourceforge/expat/expat-2.0.1.tar.gz
 tar zxvf expat-2.0.1.tar.gz 
@@ -43,11 +45,7 @@ cd ..
 
 Then download and compile Git as per the Linux instructions.
 
-However, if you want an easier path, you can use the excellent MacPorts software:
-
-Follow the instructions on the "MacPorts Homepage":http://www.macports.org/
-
-and just run 
+However, if you want an easier path, you can use the excellent MacPorts software.  To install MacPorts, simply follow the instructions on the "MacPorts Homepage":http://www.macports.org/, and then just run :
 
 shell. $ sudo port install git-core
 
@@ -55,17 +53,17 @@ For an in depth tutorial on installing on 10.4, see "this article":http://blog.k
 
 h4. Mac 10.5 - Leopard
 
-The easiest way to install is most likely the "Git OSX Installer":http://code.google.com/p/git-osx-installer/, which you can get from Google Code.  Just download and run the dmg from the website.
+The easiest way to install is most likely the "Git OSX Installer":http://code.google.com/p/git-osx-installer/, which you can get from Google Code, and has just recently been linked to as the "official" Mac version on the Git homepage.  Just download and run the dmg from the website.
 
 If you want to compile from source, all the requirements are installed with the developer CD, so you can just download source and compile pretty easily if the developer tools are installed. 
 
-For an in-depth tutorial on installations under Leopard, see "this article":http://blog.kineticweb.com/articles/2007/10/30/compiling-git-for-mac-os-x-leopard-10-5
+Finally, MacPorts is also an easy option if you have that installed.
 
-MacPorts is also an easy option if you have that installed.
+For an in-depth tutorial on installations under Leopard, see "this article":http://blog.kineticweb.com/articles/2007/10/30/compiling-git-for-mac-os-x-leopard-10-5
 
 h3. Windows
 
-There are two options on Windows currently, but the popular one seems to be "MSysGit":http://code.google.com/p/msysgit/, which installs easily and is runnable on the Windows command line.  Simply download the exe file from the "downloads list":http://code.google.com/p/msysgit/downloads/list and run it.
+There are two options on Windows currently, but the popular one is "MSysGit":http://code.google.com/p/msysgit/, which installs easily and is runnable on the Windows command line.  Simply download the exe file from the "downloads list":http://code.google.com/p/msysgit/downloads/list, execute it and follow the on-screen instructions.
 
 
 
